--- a/landing.css
+++ b/landing.css
@@ -8,7 +8,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #01020E; 
+    background: linear-gradient(10deg, #01020E, #1C1C3A);
     color: white;
     font-family: 'Quattrocento';
 }
@@ -16,7 +16,22 @@ body {
 .header {
     margin-right: 3em;
     line-height: 0;
+    cursor: pointer;
 }
+
+.header a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:visited {
+    text-decoration: none;
+    color: inherit;
+}
+a:hover {
+    text-decoration: none;
+}
+
 .header h1 {
     font-size: 4em;
     font-family: 'Oswald';
@@ -41,7 +56,7 @@ body {
 }
 select {
     padding: 10px;
-    font-size: 1.2em;
+    font-size: 1.4em;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -65,5 +80,5 @@ button {
 }
 
 button:hover {
-    background-color: #FF6347; 
+    background-color: #1C1C3A; 
 }
