--- a/sad.css
+++ b/sad.css
@@ -122,3 +122,24 @@ p {
     font-size: 1.6em;
 }
 
+.watch-providers {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px; 
+    justify-content: center; 
+    align-items: center;
+    margin-top: 10px;
+}
+
+.provider img {
+    width: 70px; 
+    height: auto;
+    border-radius: 5px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.provider img:hover {
+    transform: scale(1.1); 
+}
+
+
