--- a/home.css
+++ b/home.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     padding: 0;
     background: linear-gradient(1000deg, #01020E, #1C1C3A);
+    font-family: 'Quattrocento';
 }
 
 section {
@@ -68,7 +69,6 @@ select {
 
 .content h2 {
     font-family: 'Oswald';
-    font-size: 2.4em;
 }
 
 .content p {
@@ -79,4 +79,73 @@ select {
     font-size: 1.2em;
     font-weight: 550;
     max-width: 30em;
+}
+
+
+#content {
+    max-height: 300px;  
+    overflow-y: auto;   
+    padding: 15px;
+    border-radius: 10px;
+}
+
+
+#content::-webkit-scrollbar {
+    width: 8px;
+}
+
+#content::-webkit-scrollbar-track {
+    background: #e0e0e0;
+    border-radius: 10px;
+}
+
+#content::-webkit-scrollbar-thumb {
+    background: #444;
+    border-radius: 10px;
+}
+
+#content::-webkit-scrollbar-thumb:hover {
+    background: #333;
+}
+
+#content h2 {
+    font-size: 2em;
+    color: #333;
+    margin-bottom: 10px;
+    border-bottom: 2px solid #444;
+    padding-bottom: 5px;
+}
+
+#content ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#content ul li {
+    background: #f8f8f8;
+    margin: 10px 0;
+    padding: 10px;
+    border-left: 4px solid #444;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+#content ul li strong {
+    font-size: 18px;
+    color: #222;
+}
+
+#content ul ul {
+    margin-top: 5px;
+    margin-left: 20px;
+    list-style-type: disc;
+}
+
+#content ul ul li {
+    background: none;
+    border-left: none;
+    padding: 3px;
+    font-size: 16px;
+    color: #555;
+    box-shadow: none;
 }
