--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Quattrocento';
     margin: 0;
     padding: 0;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 section {
