--- a/main.css
+++ b/main.css
@@ -8,6 +8,8 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    overflow-y: auto; 
+    scrollbar-width: none;
 }
 
 section {
@@ -23,12 +25,12 @@ header {
 }
 
 h1 {
-    font-size: 2.8em;
+    font-size: 2em;
     margin-bottom: 10px;
 }
 
 p {
-    font-size: 1.3em;
+    font-size: 1.2em;
     opacity: 0.8;
     max-width: 50em;
     text-align: center;
@@ -45,8 +47,8 @@ p {
 
 
 .card {
-    width: 320px;
-    height: 460px;
+    width: 290px;
+    height: 430px;
     background: #222;
     border-radius: 15px;
     overflow: hidden;
@@ -120,7 +122,7 @@ p {
 }
 
 .movieinfo p {
-    font-size: 1.6em;
+    font-size: 1.2em;
 }
 
 .watch-providers {
@@ -133,7 +135,7 @@ p {
 }
 
 .provider img {
-    width: 70px; 
+    width: 50px; 
     height: auto;
     border-radius: 5px;
     transition: transform 0.3s ease-in-out;
@@ -141,6 +143,10 @@ p {
 
 .provider img:hover {
     transform: scale(1.1); 
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 
