--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap');
 
 body {
+    height: 140vh;
     text-align: center;
     background: linear-gradient(135deg, #01020E, #1C1C3A);
     color: white;
