--- a/home.css
+++ b/home.css
@@ -124,7 +124,7 @@ select {
 #content ul li {
     background: #f8f8f8;
     margin: 10px 0;
-    padding: 10px;
+    padding: 10px 10px;
     border-left: 4px solid #444;
     border-radius: 5px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
